<resources>
    <string name="app_name">CaloriesCalculator</string>

    <string name="calories_limit">Limite de calorias: 000.0/2100</string>
    <string name="food_name">Nome:</string>
    <string name="injestion_date">Data:</string>
    <string name="injestion_hour">Hora:</string>
    <string name="food_type">Refeição:</string>
    <string name="food_value">Calorias:</string>
    <string name="food_value_hint">Ex: 300</string>

    <string name="intitial_date">Data inicial</string>
    <string name="final_date">Data final</string>
    <string name="bt_register">Cadastrar</string>
    <string name="bt_visualization">Visualizar</string>

    <string name="bt_statistics">Estatísticas</string>
    <string name="bt_back">Voltar</string>

    string>
    <string name="media_of_calories">Media por dia:</string>


    <string name="sum_of_calories">Calorias Totais: </string>
    <string name="mediar_of_calories_grouped_by_meal_type">Calorias por tipo de refeição:</string>


</resources>