<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_calories_limit"
                android:text="@string/calories_limit"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:gravity="center">

                <TextView
                    android:text="@string/food_name"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_date_prompt"
                    android:text="@string/injestion_date"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_selected_date"
                    android:text="12/01/2023"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    />

                <ImageView
                    android:id="@+id/iv_show_date_picker"
                    android:src="@drawable/ic_baseline_date_range_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical">

                <TextView
                    android:text="@string/injestion_hour"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/sp_hour"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:dropDownVerticalOffset="70dp"
                    android:spinnerMode="dropdown"
                    android:background="@drawable/spinner_shape"
                    android:layout_weight="0"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:text="@string/food_type"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/sp_classifications"
                    android:layout_width="250dp"
                    android:layout_height="70dp"
                    android:background="@drawable/spinner_shape"
                    android:layout_weight="0"/>

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:gravity="center">

                <TextView
                    android:text="@string/food_value"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:hint="@string/food_value_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <Button
                android:id="@+id/bt_register"
                android:text="@string/bt_register"
                style="@style/MyDeaultBorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>