<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_vertical">

      <Button
          android:id="@+id/bt_back"
          android:text="@string/bt_back"
          style="@style/MyDeaultBorderlessButton"
          android:layout_marginTop="5dp"
          android:layout_marginRight="5dp"
          android:layout_marginBottom="5dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>

      <Button
          android:id="@+id/bt_statistics"
          style="@style/MyDeaultBorderlessButton"
          android:text="@string/bt_statistics"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginRight="5dp"
          android:layout_marginBottom="5dp"
          android:layout_weight="0"/>


   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center"
       android:layout_marginBottom="24dp">


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_vertical">

         <TextView
             android:id="@+id/tv_initial_date"
             android:text="@string/intitial_date"
             android:textSize="24sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="6dp"/>

         <ImageView
             android:id="@+id/iv_initial_date_picker"
             android:src="@drawable/ic_baseline_date_range_24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:gravity="center">

         <TextView
             android:id="@+id/tv_final_date"
             android:text="@string/final_date"
             android:textSize="24sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="6dp"/>


         <ImageView
             android:id="@+id/iv_final_date_picker"
             android:src="@drawable/ic_baseline_date_range_24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>

      </LinearLayout>

   </LinearLayout>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_meals"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/recyler_view_with_border"/>

</LinearLayout>